--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ main {
 }
 
 .sidebar {
-    background-color: #3a1e1e;
+    background-color: #1f49a1;
     color: #fff;
     padding: 2rem;
     width: 250px;
