--- a/assets/inventory.css
+++ b/assets/inventory.css
@@ -6,21 +6,28 @@ body {
 
 .main-content {
     padding: 20px;
+    margin: 24px;
+    border-radius: 16px;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 8px 2px rgb(230, 230, 230) ;
 }
 
 table {
-    border-radius: 8px;
     width: 100%;
-    border-collapse: collapse;
     margin-top: 20px;
+    background-color: #ffffff;
+    border: 2px solid #ddd;
+    border-radius: 8px;
 }
 
-table, th, td {
-    
-    border: 1px solid #ddd;
+td {
+    border-radius: 0px;
+    border-collapse:collapse;
+    border-top: 1px solid #ddd;
 }
 
 th, td {
+  
   padding: 12px;
   text-align: left;
 }
