changes in calculators

--- a/assets/style.css
+++ b/assets/style.css
@@ -392,3 +392,9 @@ ul.card li {
 .event-card{
     margin: 16px 0px;
 }
+
+.event-actions{
+    display: flex;
+    gap: 8px;
+    justify-content: space-between;
+}
