--- a/assets/inventory.css
+++ b/assets/inventory.css
@@ -40,6 +40,7 @@ th, td {
 button {
   padding: 10px 15px;
   background-color: #f90;
+  border-radius: 8px;
   border: none;
   color: white;
   cursor: pointer;
@@ -71,6 +72,11 @@ button {
     flex-wrap: wrap;
     flex-direction: column;
 }
+.item-content form label{
+    align-content: center;
+    padding: 8px;
+}
+
 .item-content form div{
     display: flex;
 }
